--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "^5.0.1",
+    "react-simple-chatbot": "^0.6.1",
     "react-slick": "^0.30.1",
     "react-spring": "^9.7.3",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.8",
     "use-places-autocomplete": "^4.0.1",
     "web-vitals": "^2.1.4"
   },
